# python-utils

./: .pdm-python  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: main.yml  sphinx.yml
docs/source/: conf.py  index.rst  modules.rst  rberga06.rst  rberga06.utils.func.rst  rberga06.utils.plugin.rst  rberga06.utils.rst  usage.rst
docs/source/api/: api.rst
src/rberga06/utils/: __about__.py  about.py  access.py  cache.py  deps.py  imports.py  types.py
src/rberga06/utils/decorators/: sig.py  wrap.py
src/rberga06/utils/func/: dec.py  info.py  sig.py  wrap.py
src/rberga06/utils/plugin/: __init__.py  dynamic.py  spec.py  static.py  system.py
tests/: __init__.py  test__docs.py  test_cache.py  test_imports.py  test_plugins.py  test_types.py  testutils.py
tests/func/: __init__.py  test_dec.py  test_info.py  test_sig.py  test_wrap.py
tests/plugins/err_compat/: .plugin.yml
tests/plugins/err_feature/: .plugin.yml  lib.py
tests/plugins/err_malformed/: .plugin.yml
tests/plugins/hello/: .plugin.yml  lib.py
tests/plugins/hello_pkg/: .plugin.yml  __init__.py  child.py
