[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[project]
name = "rberga06-utils"
version = "0.0.1.dev3"
description = "Useful utilities for Python projects."
authors = [
    {name = "RBerga06", email = "78449715+RBerga06@users.noreply.github.com"},
]
readme = "README.md"
license = {text = "AGPL-3.0-or-later"}
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "packaging>=23.1",
    "pyyaml>=6.0",
    "typing-extensions>=4.7.0",
]

[project.optional-dependencies]
docs = [
    "sphinx>=7.2.2",
    "furo>=2023.8.17",
]


[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mypy-testing>=0.1.1",
]

[tool.pdm.build]
includes = ["src/rberga06/"]
package-dir = "src"
source-includes = [
    "*.typed",
    "*.rst",
    "docs/source/",
    "docs/make.bat",
    "docs/Makefile",
]
# run-setuptools = true


[tool.pytest.ini_options]
testpaths = [
    "tests",
]
addopts = """\
    --durations=5 \
    --cov=rberga06.utils \
    --cov-report term \
    --cov-report html \
"""
#   --benchmark-autosave \
norecursedirs = [
    "tests/plugins/*",
]


[tool.mypy]
mypy_path = [
    "src",
]
explicit_package_bases = true
packages = [
    "rberga06.utils",
]
plugins = [
    "pydantic.mypy",
]
strict = true
warn_unused_ignores = false
